--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -2,6 +2,9 @@
 <html>
 <head>
 <title><%= title %></title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, minimum-scale=1.0,user-scalable=no">
+<meta name="format-detection" content="telephone=no">
 <link href="/public/css/style.css" rel="stylesheet" >
 <link href="<%= basePath %>/module<%= currentPage %>.css" type="text/css" rel="stylesheet" >
 <script>
@@ -10,13 +13,7 @@ var basePath = '<%= basePath %>';
 </head>
 <body>
 <header class="clearfix">
-   <h1><a href="/"><img src="/public/imgs/logo.png" /> 我的nodejs项目</a></h1>
-   <menu>    
-        <a class="menuLink beforeLogin" href="/register">注册</a>
-        <a class="menuLink beforeLogin" href="/login">登录</a>
-        <a class="menuLink afterLogin menu_username" href="/user/center"></a>
-        <a class="menuLink afterLogin" href="/logout">退出</a>
-    </menu>
+  
 </header>
 <section class="wrapper">
 
