--- a/views/issue/login.ejs
+++ b/views/issue/login.ejs
@@ -1,8 +1,8 @@
 <% include ../common/header.ejs %>
-  
-   <form class="form" id="loginForm" class="form clearfix">
-        <label><tt>用户名:</tt><input type="text" class="input_text" id="username" /></label>
-         <label><tt>密码: </tt><input type="password" class="input_text" id="password" /></label>
-        <button type="submit" class="btn">登录</button>
-    </form>
+<form id="loginForm" class="form clearfix loginForm">
+    <label><tt></tt><input type="text" class="input_text" id="username" /></label>
+    <label><tt></tt><input type="password" class="input_text" id="password" /></label>
+	<label><button type="submit" class="btn">登录</button></label>
+</form>
+<a href="/register">点击注册成为仟金顶会员</a>
 <% include ../common/footer.ejs %>
