--- a/assets/module/issue/register/register.css
+++ b/assets/module/issue/register/register.css
@@ -1,7 +1,35 @@
-.textTip{
-	margin: 0px;
-	font-size: 12px;
-	color: #f00;
-	padding-left: 120px;
-	height: 12px;
+
+.registerForm label{
+	display: block;
+	position: relative;
+	padding: 0px;
+	margin: 10px 0;
+}
+
+.registerForm label tt{
+	position: absolute;
+}
+
+.registerForm .input_text{
+	width: 100%;
+	height: 24px;
+	line-height: 24px;
+}
+
+.registerForm .password{
+	width: 55%;
+	height: 24px;
+	line-height: 24px;
+}
+
+.registerForm .code{
+	width: 40%;
+	height: 24px;
+	line-height: 24px;
+}
+
+.registerForm button{
+	height: 34px;
+	line-height: 28px;
+	width: 100%;
 }
