--- a/views/user/info.ejs
+++ b/views/user/info.ejs
@@ -1,10 +1,36 @@
 <% include ../common/header.ejs %>
-   <form class="form" id="registerForm">
-        <h2>用户信息</h2>
-        <ul class="nav">
-            <li><a href="/user/center">用户中心</a></li>
-            <li><a href="/user/info">用户信息</a></li>
-            <li><a href="/user/blog">用户博客</a></li>
-        </ul>
+   <div class="userinfo">
+        <p>
+			<h5>注册时间</h5>
+			<span>2011年<span>
+		</p>
+		<p>
+			<h5>人员规模</h5>
+			<span>10-50人<span>
+		</p>
+		<p>
+			<h5>公司地址</h5>
+			<span>浙江省杭州市滨江区秋溢路289号<span>
+		</p>
+		<p>
+			<h5>工商注册号</h5>
+			<span>2345345456453<span>
+		</p>
+		<p>
+			<h5>法定代表人</h5>
+			<span>杜晨娇<span>
+		</p>
+		<p>
+			<h5>身份证号</h5>
+			<span>43233457443465565<span>
+		</p>
+		<p>
+			<h5>常用联系人</h5>
+			<span>周雷波<span>
+		</p>
+		<p>
+			<h5>手机号</h5>
+			<span>13435565654<span>
+		</p>
     </form>
 <% include ../common/footer.ejs %>
