--- a/views/issue/register.ejs
+++ b/views/issue/register.ejs
@@ -3,10 +3,10 @@
 		<label><tt></tt><input type="text" class="input_text" id="username" /></label>
 		<label class="clearfix">
 			<tt></tt>
-			<input type="password" class="input_text password fl" id="password" />
+			<input type="text" class="input_text password fl" id="code" />
 			<input type="button" class="code fr" value="获取短信验证码" />
 		</label>
-		<label><tt></tt><input type="text" class="input_text" id="email" /></label>
+		<label><tt></tt><input type="text" class="input_text" id="password" /></label>
         <label><button type="submit" class="btn">注册</button></label>
     </form>
 <% include ../common/footer.ejs %>
