--- a/views/issue/login.ejs
+++ b/views/issue/login.ejs
@@ -5,4 +5,5 @@
 	<label><button type="submit" class="btn">登录</button></label>
 </form>
 <a href="/register">点击注册成为仟金顶会员</a>
+<a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxfb96cc74703eb978&redirect_uri=http://wx.upopen.cn/login&response_type=code&scope=snsapi_base&state=123&connect_redirect=1#wechat_redirect">aadddddddda</a>
 <% include ../common/footer.ejs %>
