--- a/views/issue/register.ejs
+++ b/views/issue/register.ejs
@@ -4,7 +4,7 @@
 		<label class="clearfix">
 			<tt></tt>
 			<input type="text" class="input_text password fl" id="code" />
-			<input type="button" class="code fr" value="获取短信验证码" />
+			<input type="button" id="smsCodeBtn" class="code fr" value="获取短信验证码" />
 		</label>
 		<label><tt></tt><input type="text" class="input_text" id="password" /></label>
         <label><button type="submit" class="btn">注册</button></label>
