--- a/views/issue/login.ejs
+++ b/views/issue/login.ejs
@@ -1,7 +1,7 @@
 <% include ../common/header.ejs %>
 <form id="loginForm" class="form clearfix loginForm">
-    <label><tt></tt><input type="text" class="input_text" id="username" /></label>
-    <label><tt></tt><input type="password" class="input_text" id="password" /></label>
+    <label><tt></tt><input type="text" value="15397172208" class="input_text" id="username" /></label>
+    <label><tt></tt><input type="password" class="input_text" value="111111" id="password" /></label>
 	<label><button type="submit" class="btn">登录</button></label>
 </form>
 <a href="/register">点击注册成为仟金顶会员</a>
