--- a/views/user/join.ejs
+++ b/views/user/join.ejs
@@ -1,29 +1,33 @@
 <% include ../common/header.ejs %>
    <form class="form userjoinForm" id="registerForm">
-		<label class="clearfix"><tt>公司名称</tt><input type="text" class="input_text" id="username" /></label>
+		<label class="clearfix"><tt>公司名称</tt><input type="text" class="input_text" id="corpName" maxLength="25" /></label>
 		<label class="clearfix"><tt>注册时间</tt>
-			<select>
-				<option>2015年</option>
+			<select id="registerYear" class="join_select">
 			</select>
 		</label>
 		<label class="clearfix"><tt>人员规模</tt>
-			<select>
-				<option>10-50人</option>
+			<select id="size" class="join_select">
+				<option value="0">50以下</option>
+				<option value="1">50-500</option>
+				<option value="2">500-1000</option>
+				<option value="3">1000以上</option>
 			</select>
 		</label>
-		<label class="clearfix"><tt>办公地址</tt><input type="text" class="input_text" id="username" /></label>
-		<label class="clearfix"><tt>详细地址</tt><input type="text" class="input_text" id="username" /></label>
+		<label class="clearfix"><tt>办公地址</tt><input type="text" class="input_text" id="address" maxLength="30" /></label>
+		<label class="clearfix"><tt>详细地址</tt><input type="text" class="input_text" id="businessId" maxLength="15" /></label>
 		<label class="clearfix"><tt>工商注册号</tt><input type="text" class="input_text" id="username" /></label>
-		<label class="clearfix"><tt>经营品类</tt><input type="text" class="input_text" id="username" /></label>
-		<label class="clearfix"><tt>品类厂家</tt>
-			<select>
-				<option>厨房电器</option>
+		<label class="clearfix"><tt>经营品类</tt>
+			<select id="model" class="join_select">
+				<option value="1">电梯系统</option><option value="2">空调设备</option><option value="3">厨房电器</option>
 			</select>
 		</label>
-		<label class="clearfix"><tt>法定代表人</tt><input type="text" class="input_text" id="username" /></label>
-		<label class="clearfix"><tt>身份证号</tt><input type="text" class="input_text" id="username" /></label>
-		<label class="clearfix"><tt>常用联系人</tt><input type="text" class="input_text" id="username" /></label>
-		<label class="clearfix"><tt>手机号码</tt><input type="text" class="input_text" id="username" /></label>
+		<label class="clearfix"><tt>品类厂家</tt>
+			<input type="text" class="input_text" id="partner" maxLength="25" />
+		</label>
+		<label class="clearfix"><tt>法定代表人</tt><input type="text" class="input_text" id="legalPerson" maxLength="11" /></label>
+		<label class="clearfix"><tt>身份证号</tt><input type="text" class="input_text" id="idCard" maxLength="18" /></label>
+		<label class="clearfix"><tt>联系人</tt><input type="text" class="input_text" id="contact" maxLength="11" /></label>
+		<label class="clearfix"><tt>手机号码</tt><input type="text" class="input_text" id="mobile" maxLength="11" /></label>
 		
         <label class="clearfix"><button type="submit" class="btn">提交申请</button></label>
     </form>
