--- a/views/user/join.ejs
+++ b/views/user/join.ejs
@@ -15,7 +15,7 @@
 		</label>
 		<label class="clearfix"><tt>办公地址</tt><input type="text" class="input_text" id="address" maxLength="30" /></label>
 		<label class="clearfix"><tt>详细地址</tt><input type="text" class="input_text" id="businessId" maxLength="15" value="秋溢路289号" /></label>
-		<label class="clearfix"><tt>工商注册号</tt><input type="text" class="input_text" id="username" /></label>
+		<label class="clearfix"><tt>工商注册号</tt><input type="text" class="input_text" id="businessId" maxLength="15" value="123456789012345"/></label>
 		<label class="clearfix"><tt>经营品类</tt>
 			<select id="model" class="join_select">
 				<option value="1">电梯系统</option><option value="2">空调设备</option><option value="3">厨房电器</option>
