--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -12,8 +12,5 @@ var basePath = '<%= basePath %>';
 </script>
 </head>
 <body>
-<header class="clearfix">
-  
-</header>
-<section class="wrapper">
+<section class="wrapper clearfix">
 
