--- a/assets/module/issue/login/login.css
+++ b/assets/module/issue/login/login.css
@@ -1,3 +1,6 @@
+.loginCanvas{
+	padding: 20px;
+}
 
 .loginForm label{
 	display: block;
@@ -11,13 +14,22 @@
 }
 
 .loginForm .input_text{
-	width: 100%;
-	height: 24px;
-	line-height: 24px;
+	width: 98%;
 }
 
 .loginForm button{
 	height: 34px;
 	line-height: 28px;
 	width: 100%;
+}
+
+.linkBtn{
+	display: block;
+	border: 1px solid #ffc34d;
+	color: #ffc34d;
+	background: #fff;
+	font-size: 14px;
+	text-align: center;
+	height: 32px;
+	line-height: 32px;
 }
