--- a/views/issue/login.ejs
+++ b/views/issue/login.ejs
@@ -1,9 +1,11 @@
 <% include ../common/header.ejs %>
-<form id="loginForm" class="form clearfix loginForm">
-    <label><tt></tt><input type="text" value="15397172208" class="input_text" id="username" /></label>
-    <label><tt></tt><input type="password" class="input_text" value="111111" id="password" /></label>
-	<label><button type="submit" class="btn">登录</button></label>
-</form>
-<a href="/register">点击注册成为仟金顶会员</a>
-<a href="https%3A%2F%2Fopen.weixin.qq.com%2Fconnect%2Foauth2%2Fauthorize%3Fappid%3Dwxfb96cc74703eb978%26redirect_uri%3Dhttp%3A%2F%2Fwx.upopen.cn%2Flogin%26response_type%3Dcode%26scope%3Dsnsapi_base%26state%3D123%26connect_redirect%3D1%23wechat_redirect">aadddddddda</a>
+<div class="loginCanvas">
+	<form id="loginForm" class="form clearfix loginForm">
+		<label><tt></tt><input type="text" placeHolder="请输入手机号" value="" class="input_text" id="username" /></label>
+		<label><tt></tt><input type="password" placeHolder="请输入密码" class="input_text" value="" id="password" /></label>
+		<label><button type="submit" class="btn">登录</button></label>
+	</form>
+	<p>点击注册成为仟金顶会员</p>
+	<a class="linkBtn" href="/register">注册</a>
+</div>
 <% include ../common/footer.ejs %>
