--- a/views/issue/login.ejs
+++ b/views/issue/login.ejs
@@ -1,5 +1,5 @@
 <% include ../common/header.ejs %>
-<div class="loginCanvas">
+<div class="loginBox">
 	<form id="loginForm" class="form clearfix loginForm">
 		<label><tt></tt><input type="text" placeHolder="请输入手机号" value="" class="input_text" id="username" /></label>
 		<label><tt></tt><input type="password" placeHolder="请输入密码" class="input_text" value="" id="password" /></label>
