--- a/views/user/join.ejs
+++ b/views/user/join.ejs
@@ -1,5 +1,6 @@
 <% include ../common/header.ejs %>
-   <form class="form userjoinForm" id="registerForm">
+<div class="userjoinBox">
+   <form class="form userjoinForm" id="userjoinBox">
 		<label class="clearfix"><tt>公司名称</tt><input type="text" class="input_text" id="corpName" maxLength="25" value="绿地建筑有限公司" /></label>
 		<label class="clearfix"><tt>注册时间</tt>
 			<select id="registerYear" class="join_select">
