--- a/assets/module/issue/register/register.css
+++ b/assets/module/issue/register/register.css
@@ -1,4 +1,6 @@
-
+.registerBox{
+	padding: 20px;
+}
 .registerForm label{
 	display: block;
 	position: relative;
@@ -11,21 +13,20 @@
 }
 
 .registerForm .input_text{
-	width: 100%;
-	height: 24px;
-	line-height: 24px;
-}
-
-.registerForm .password{
-	width: 55%;
-	height: 24px;
-	line-height: 24px;
+	width: 98%;
 }
 
 .registerForm .code{
+	width: 55%;
+}
+
+.registerForm .codeBtn{
 	width: 40%;
-	height: 24px;
-	line-height: 24px;
+	height: 34px;
+	line-height: 32px;
+	background: #fff;
+	border: 1px solid #1fbbb3;
+	color: #1fbbb3;
 }
 
 .registerForm button{
