--- a/views/user/info.ejs
+++ b/views/user/info.ejs
@@ -1,37 +1,37 @@
 <% include ../common/header.ejs %>
+<div class="userinfoBox">
 	<h2 id=""></h2>
-   <div class="userinfo">
-        <p>
-			<h5>注册时间</h5>
-			<span id="registerYear">2011年<span>
-		</p>
-		<p>
-			<h5>人员规模</h5>
-			<span id="size">10-50人<span>
-		</p>
-		<p>
-			<h5>公司地址</h5>
-			<span id="address">浙江省杭州市滨江区秋溢路289号<span>
-		</p>
-		<p>
-			<h5>工商注册号</h5>
-			<span id="businessId">2345345456453<span>
-		</p>
-		<p>
-			<h5>法定代表人</h5>
-			<span id="legalPerson">杜晨娇<span>
-		</p>
-		<p>
-			<h5>身份证号</h5>
-			<span id="idCard">43233457443465565<span>
-		</p>
-		<p>
-			<h5>常用联系人</h5>
-			<span id="contact">周雷波<span>
-		</p>
-		<p>
-			<h5>手机号</h5>
-			<span id="mobile">13435565654<span>
-		</p>
-    </form>
+    <p>
+		<h5>注册时间</h5>
+		<span id="registerYear">2011年<span>
+	</p>
+	<p>
+		<h5>人员规模</h5>
+		<span id="size">10-50人<span>
+	</p>
+	<p>
+		<h5>公司地址</h5>
+		<span id="address">浙江省杭州市滨江区秋溢路289号<span>
+	</p>
+	<p>
+		<h5>工商注册号</h5>
+		<span id="businessId">2345345456453<span>
+	</p>
+	<p>
+		<h5>法定代表人</h5>
+		<span id="legalPerson">杜晨娇<span>
+	</p>
+	<p>
+		<h5>身份证号</h5>
+		<span id="idCard">43233457443465565<span>
+	</p>
+	<p>
+		<h5>常用联系人</h5>
+		<span id="contact">周雷波<span>
+	</p>
+	<p>
+		<h5>手机号</h5>
+		<span id="mobile">13435565654<span>
+	</p>
+</div>
 <% include ../common/footer.ejs %>
