--- a/views/issue/register.ejs
+++ b/views/issue/register.ejs
@@ -1,7 +1,7 @@
 <% include ../common/header.ejs %>
 <div class="registerBox">
    <form class="form registerForm" id="registerForm">
-		<label><tt></tt><input type="text" class="input_text" id="username" /></label>
+		<label><tt></tt><input type="text" maxLength="11" class="input_text" id="username" /></label>
 		<label class="clearfix">
 			<tt></tt>
 			<input type="text" class="input_text code fl" id="code" />
