--- a/views/user/info.ejs
+++ b/views/user/info.ejs
@@ -3,35 +3,35 @@
 	<h2 id=""></h2>
     <p>
 		<h5>注册时间</h5>
-		<span id="registerYear">2011年<span>
+		<span id="registerYear"></span>
 	</p>
 	<p>
 		<h5>人员规模</h5>
-		<span id="size">10-50人<span>
+		<span id="size"></span>
 	</p>
 	<p>
 		<h5>公司地址</h5>
-		<span id="address">浙江省杭州市滨江区秋溢路289号<span>
+		<span id="address"></span>
 	</p>
 	<p>
 		<h5>工商注册号</h5>
-		<span id="businessId">2345345456453<span>
+		<span id="businessId"></span>
 	</p>
 	<p>
 		<h5>法定代表人</h5>
-		<span id="legalPerson">杜晨娇<span>
+		<span id="legalPerson"></span>
 	</p>
 	<p>
 		<h5>身份证号</h5>
-		<span id="idCard">43233457443465565<span>
+		<span id="idCard"></span>
 	</p>
 	<p>
 		<h5>常用联系人</h5>
-		<span id="contact">周雷波<span>
+		<span id="contact"></span>
 	</p>
 	<p>
 		<h5>手机号</h5>
-		<span id="mobile">13435565654<span>
+		<span id="mobile"></span>
 	</p>
 </div>
 <% include ../common/footer.ejs %>
