--- a/assets/module/issue/register/register.css
+++ b/assets/module/issue/register/register.css
@@ -13,7 +13,7 @@
 }
 
 .registerForm .input_text{
-	width: 98%;
+	width: 95%;
 }
 
 .registerForm .code{
@@ -26,6 +26,7 @@
 	line-height: 32px;
 	background: #fff;
 	border: 1px solid #1fbbb3;
+	border-radius: 0;
 	color: #1fbbb3;
 }
 
