--- a/views/issue/register.ejs
+++ b/views/issue/register.ejs
@@ -1,14 +1,15 @@
 <% include ../common/header.ejs %>
 <div class="registerBox">
    <form class="form registerForm" id="registerForm">
-		<label><tt></tt><input type="text" maxLength="11" class="input_text" id="username" /></label>
+		<label><tt></tt><input placeHolder="请输入手机号" type="text" maxLength="11" class="input_text" id="username" /></label>
 		<label class="clearfix">
 			<tt></tt>
-			<input type="text" class="input_text code fl" id="code" />
+			<input placeHolder="请输入短信验证码" type="text" class="input_text code fl" id="code" />
 			<input type="button" id="smsCodeBtn" class="codeBtn fr" value="获取短信验证码" />
 		</label>
-		<label><tt></tt><input type="text" class="input_text" id="password" /></label>
+		<label><tt></tt><input placeHolder="请输入密码" type="text" class="input_text" id="password" /></label>
         <label><button type="submit" class="btn">注册</button></label>
+	<label class="agree""><input type="checkbox" checked id="agree" />我已阅读并同意遵守<a href="">法律声明和隐私条款</a></label>
     </form>
 </div>
 <% include ../common/footer.ejs %>
