--- a/views/user/info.ejs
+++ b/views/user/info.ejs
@@ -1,37 +1,37 @@
 <% include ../common/header.ejs %>
 <div class="userinfoBox">
-	<h2 id=""></h2>
-    <p>
+	<h2 id="corpName"></h2>
+        <div class="clearfix items">
 		<h5>注册时间</h5>
 		<span id="registerYear"></span>
-	</p>
-	<p>
+	</div>
+	<div class="clearfix items">
 		<h5>人员规模</h5>
 		<span id="size"></span>
-	</p>
-	<p>
+	</div>
+	<div class="clearfix items">
 		<h5>公司地址</h5>
 		<span id="address"></span>
-	</p>
-	<p>
+	</div>
+	<div class="clearfix items">
 		<h5>工商注册号</h5>
 		<span id="businessId"></span>
-	</p>
-	<p>
+	</div>
+	<div class="clearfix items">
 		<h5>法定代表人</h5>
 		<span id="legalPerson"></span>
-	</p>
-	<p>
+	</div>
+	<div class="clearfix items">
 		<h5>身份证号</h5>
 		<span id="idCard"></span>
-	</p>
-	<p>
+	</div>
+	<div class="clearfix items">
 		<h5>常用联系人</h5>
 		<span id="contact"></span>
-	</p>
-	<p>
-		<h5>手机号</h5>
-		<span id="mobile"></span>
-	</p>
+	</div>
+<div class="clearfix items">
+	<h5>手机号</h5>
+	<span id="mobile"></span>
+</div>
 </div>
 <% include ../common/footer.ejs %>
