--- a/views/user/partner.ejs
+++ b/views/user/partner.ejs
@@ -3,7 +3,7 @@
 	<div class="partnersGrid" id="partnersGrid">
 		
 	</div>
-   <form class="form" id="addPartner">
+   <form class="form partnerForm" id="addPartner">
 		<div class="addPartnerInfo">
 		    <select id="partnerModel" class="addModel">
 			</select>
