--- a/assets/module/user/partner/partner.css
+++ b/assets/module/user/partner/partner.css
@@ -7,15 +7,17 @@
 	background: #fff;
 	padding: 10px;
 	margin: 10px 0;
+	line-height: 24px;
 }
 
 .partnerItem .index{
-	width: 20%;
+	width: 16%;
+	color: #8f8f8f;
 	display: block;
 	height: 50px;
 	line-height: 50px;
 	text-align: center;
-	font-size: 40px;
+	font-size: 48px;
 }
 
 .partnerItem .info{
@@ -27,14 +29,24 @@
 
 .partnerItem .company{
 	display: block;
+	margin-left: -4px;
 	height: 24px;
 	line-height: 24px;
 }
 
+.partnerItem .status{
+	font-size: 12px;
+}
+
+.partnerForm{
+	background: #fff;
+	padding: 10px;
+}
 .addModel{
-	height: 32px;
+	height: 34px;
 	line-height: 32px;
-	width: 20%;
+	width: 30%;
+	border-radius: 0;
 }
 
 .addPartnerInfo{
@@ -42,7 +54,10 @@
 }
 
 .addPartnerInfo .input_text{
-	width: 75%;
+	width: 69%;
+	height: 32px;
+	padding: 0px;
+	margin-left: -4px;
 }
 
 .addPartnerBtn{
