--- a/views/issue/login.ejs
+++ b/views/issue/login.ejs
@@ -1,7 +1,7 @@
 <% include ../common/header.ejs %>
 <div class="loginBox">
 	<form id="loginForm" class="form clearfix loginForm">
-		<label><tt></tt><input maxLength="11" type="text" placeHolder="请输入手机号" value="" class="input_text" id="username" /></label>
+		<label><tt></tt><input maxLength="11" type="tel" placeHolder="请输入手机号" value="" class="input_text" id="username" /></label>
 		<label><tt></tt><input type="password" placeHolder="请输入密码" class="input_text" value="" id="password" /></label>
 		<label><button type="submit" class="btn">登&nbsp;&nbsp;录</button></label>
 	</form>
