--- a/views/issue/login.ejs
+++ b/views/issue/login.ejs
@@ -2,7 +2,7 @@
 <div class="loginBox">
 	<form id="loginForm" class="form clearfix loginForm">
 		<label><tt></tt><input maxLength="11" type="tel" placeHolder="请输入手机号" value="" class="input_text" id="username" /></label>
-		<label><tt></tt><input type="password" placeHolder="请输入密码" class="input_text" value="" id="password" /></label>
+		<label><tt></tt><input type="password" maxLength="16" placeHolder="请输入密码" class="input_text" value="" id="password" /></label>
 		<label><button type="submit" class="btn">登&nbsp;&nbsp;录</button></label>
 	</form>
 	<p class="linkTip">还不是仟金顶会员?点击注册</p>
