--- a/views/user/join.ejs
+++ b/views/user/join.ejs
@@ -29,6 +29,7 @@
 		<label class="clearfix"><tt>身份证号</tt><input type="text" class="input_text" id="idCard" maxLength="18" value="410523198505105015" /></label>
 		<label class="clearfix"><tt>联系人</tt><input type="text" class="input_text" id="contact" maxLength="11" value="杜晨娇" /></label>
 		<label class="clearfix"><tt>手机号码</tt><input type="text" class="input_text" id="mobile" maxLength="11" value="15397172298" /></label>
+		<label class="clearfix"><tt>邮箱</tt><input type="text" class="input_text" id="email" maxLength="50" value="15397172298" /></label>
 		
         <label class="clearfix"><button type="submit" class="btn">提交申请</button></label>
     </form>
