--- a/views/user/join.ejs
+++ b/views/user/join.ejs
@@ -1,4 +1,5 @@
 <% include ../common/header.ejs %>
+<link rel="stylesheet" type="text/css" href="/widget/area/area.css" >
 <div class="userjoinBox">
    <form class="form userjoinForm" id="userjoinBox">
 		<label class="clearfix"><tt>公司名称</tt><input type="text" class="input_text" id="corpName" maxLength="25" value="绿地建筑有限公司" /></label>
