--- a/views/user/join.ejs
+++ b/views/user/join.ejs
@@ -15,7 +15,7 @@
 				<option value="3">1000以上</option>
 			</select>
 		</label>
-		<label class="clearfix"><tt>办公地址</tt><input type="text" class="input_text" id="city" maxLength="30" /></label>
+		<label class="clearfix"><tt>办公地址</tt><input readOnly="true" type="text" class="input_text" id="city" value="浙江省杭州市西湖区" data="330106" maxLength="30" /></label>
 		<label class="clearfix"><tt>详细地址</tt><input type="text" class="input_text" id="address" maxLength="15" value="秋溢路289号" /></label>
 		<label class="clearfix"><tt>工商注册号</tt><input type="text" class="input_text" id="businessId" maxLength="15" value="123456789012345"/></label>
 		<label class="clearfix"><tt>经营品类</tt>
