--- a/assets/widget/area/area.css
+++ b/assets/widget/area/area.css
@@ -5,7 +5,6 @@
 	background: #fff;
 	top: 0px;
 	right: 0px;
-	overflow-y: auto;
 }
 
 .Area_province, .Area_city, .Area_county{
@@ -15,12 +14,14 @@
 	height: 100%;
 	right: 0;
 	background: #fff;
+	overflow-y: auto;
 }
 
 .Area_province li, .Area_city li, .Area_county li{
 	height: 32px;
 	line-height: 32px;
-	border-bottom: 1px solid #afafaf;
+	border-bottom: 1px solid #E4E3E3;
+	padding-left: 15px;
 }
 
 .Area_mask{
