--- a/views/user/partner.ejs
+++ b/views/user/partner.ejs
@@ -7,7 +7,7 @@
 		<div class="addPartnerInfo">
 		    <select id="partnerModel" class="addModel">
 			</select>
-			<input type="text" class="input_text" id="partnerCompany" />
+			<input placeHolder="请输入合作厂家" type="text" maxLength="25" class="input_text" id="partnerCompany" />
 		</div>
 		<button type="submit" class="addPartnerBtn">提交</button>
     </form>
