--- a/views/issue/welcome.ejs
+++ b/views/issue/welcome.ejs
@@ -1,5 +1,9 @@
 <% include ../common/header.ejs %>
 <div class="welcome">
-   welcome
+	<h2>欢迎您</h2>
+	<h3 id="corpname"></h3>
+	<a href="#"><img src="/module/issue/welcome/imgs/ad1.png" width="100%" /></a>
+	<a href="#"><img src="/module/issue/welcome/imgs/ad2.png" width="100%" /></a>
+	<a href="#"><img src="/module/issue/welcome/imgs/ad3.png" width="100%" /></a>
 </div>
 <% include ../common/footer.ejs %>
