--- a/views/user/info.ejs
+++ b/views/user/info.ejs
@@ -1,37 +1,37 @@
 <% include ../common/header.ejs %>
 <div class="userinfoBox">
 	<h2 id="corpName"></h2>
-        <div class="clearfix items">
-		<h5>注册时间</h5>
-		<span id="registerYear"></span>
+        <div class="clearfix items itema">
+			<h5>注册时间</h5>
+			<span id="registerYear"></span>
+		</div>
+		<div class="clearfix items itemb">
+			<h5>人员规模</h5>
+			<span id="size"></span>
+		</div>
+		<div class="clearfix items itemc">
+			<h5>公司地址</h5>
+			<span id="address"></span>
+		</div>
+		<div class="clearfix items itemd">
+			<h5>工商注册号</h5>
+			<span id="businessId"></span>
+		</div>
+		<div class="clearfix items iteme">
+			<h5>法定代表人</h5>
+			<span id="legalPerson"></span>
+		</div>
+		<div class="clearfix items itemf">
+			<h5>身份证号</h5>
+			<span id="idCard"></span>
+		</div>
+		<div class="clearfix items itemg">
+			<h5>常用联系人</h5>
+			<span id="contact"></span>
+		</div>
+	<div class="clearfix items itemh">
+		<h5>手机号</h5>
+		<span id="mobile"></span>
 	</div>
-	<div class="clearfix items">
-		<h5>人员规模</h5>
-		<span id="size"></span>
-	</div>
-	<div class="clearfix items">
-		<h5>公司地址</h5>
-		<span id="address"></span>
-	</div>
-	<div class="clearfix items">
-		<h5>工商注册号</h5>
-		<span id="businessId"></span>
-	</div>
-	<div class="clearfix items">
-		<h5>法定代表人</h5>
-		<span id="legalPerson"></span>
-	</div>
-	<div class="clearfix items">
-		<h5>身份证号</h5>
-		<span id="idCard"></span>
-	</div>
-	<div class="clearfix items">
-		<h5>常用联系人</h5>
-		<span id="contact"></span>
-	</div>
-<div class="clearfix items">
-	<h5>手机号</h5>
-	<span id="mobile"></span>
-</div>
 </div>
 <% include ../common/footer.ejs %>
