--- a/assets/module/user/info/info.css
+++ b/assets/module/user/info/info.css
@@ -51,6 +51,10 @@
 	margin: 0px;
 	font-weight: normal;
 	height: 18px;
-	font-size: 14px !important;
+	font-size: 14px;
 	line-height: 18px;
+}
+
+.userinfoBox span{
+	font-size: 14px;
 }
