--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, minimum-scale=1.0,user-scalable=no">
 <meta name="format-detection" content="telephone=no">
 <link href="/public/css/style.css" rel="stylesheet" >
+<link href="/widget/mdialog/mdialog.css" rel="stylesheet" >
 <link href="<%= basePath %>/module<%= currentPage %>.css" type="text/css" rel="stylesheet" >
 <script>
 var basePath = '<%= basePath %>';
