--- a/views/user/join.ejs
+++ b/views/user/join.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" type="text/css" href="/widget/area/area.css" >
 <div class="userjoinBox">
    <form class="form userjoinForm" id="userjoinBox">
-		<label class="clearfix"><tt>公司名称</tt><input type="text" class="input_text" id="corpName" maxLength="25" value="绿地建筑有限公司" /></label>
+		<label class="clearfix"><tt>公司名称</tt><input type="text" class="input_text" id="corpName" maxLength="25" /></label>
 		<label class="clearfix"><tt>注册时间</tt>
 			<select id="registerYear" class="join_select">
 			</select>
@@ -16,21 +16,21 @@
 			</select>
 		</label>
 		<label class="clearfix"><tt>办公区域</tt><input readOnly="true" type="text" class="input_text" id="city" value="浙江省杭州市西湖区" data="330106" maxLength="30" /></label>
-		<label class="clearfix"><tt>详细地址</tt><input type="text" class="input_text" id="address" maxLength="15" value="秋溢路289号" /></label>
-		<label class="clearfix"><tt>工商注册号</tt><input type="text" class="input_text" id="businessId" maxLength="15" value="123456789012345"/></label>
+		<label class="clearfix"><tt>详细地址</tt><input type="text" class="input_text" id="address" maxLength="15" /></label>
+		<label class="clearfix"><tt>工商注册号</tt><input type="text" class="input_text" id="businessId" maxLength="15" /></label>
 		<label class="clearfix"><tt>经营品类</tt>
 			<select id="model" class="join_select">
 				<option value="1">电梯系统</option><option value="2">空调设备</option><option value="3">厨房电器</option>
 			</select>
 		</label>
 		<label class="clearfix"><tt>品类厂家</tt>
-			<input type="text" class="input_text" id="partner" maxLength="25" value="海尔电器" />
+			<input type="text" class="input_text" id="partner" maxLength="25" />
 		</label>
-		<label class="clearfix"><tt>法定代表人</tt><input type="text" class="input_text" id="legalPerson" maxLength="11" value="周雷波" /></label>
-		<label class="clearfix"><tt>身份证号</tt><input type="text" class="input_text" id="idCard" maxLength="18" value="410523198404105015" /></label>
-		<label class="clearfix"><tt>联系人</tt><input type="text" class="input_text" id="contact" maxLength="11" value="杜晨娇" /></label>
-		<label class="clearfix"><tt>手机号码</tt><input type="text" class="input_text" id="mobile" maxLength="11" value="15397172298" /></label>
-		<label class="clearfix"><tt>邮箱</tt><input type="text" class="input_text" id="email" maxLength="50" value="15397172298@qq.com" /></label>
+		<label class="clearfix"><tt>法定代表人</tt><input type="text" class="input_text" id="legalPerson" maxLength="11" /></label>
+		<label class="clearfix"><tt>身份证号</tt><input type="text" class="input_text" id="idCard" maxLength="18"  /></label>
+		<label class="clearfix"><tt>联系人</tt><input type="text" class="input_text" id="contact" maxLength="11" /></label>
+		<label class="clearfix"><tt>手机号码</tt><input type="text" class="input_text" id="mobile" maxLength="11"  /></label>
+		<label class="clearfix"><tt>邮箱</tt><input type="text" class="input_text" id="email" maxLength="50"  /></label>
 		
         <label class="clearfix"><button type="submit" class="btn">提交申请</button></label>
     </form>
