--- a/assets/module/issue/register/register.css
+++ b/assets/module/issue/register/register.css
@@ -43,12 +43,19 @@
 .registerForm .pwdView{
 	position: absolute;
 	right: 0px;
-	top: 0px;
-	//background: #f00;
-	height: 38px;
-	width: 38px;
+	top: 1px;
+	background: url( ./imgs/passwordIcon.png ) 0 5px no-repeat;
+	height: 34px;
+	width: 34px;
 	text-align: center;
-	line-height: 38px;}
+	line-height: 38px;
+	background-size: 60%;
+}
+
+.registerForm .pwdView_hide{
+	background-position: 0px -30px;
+}
+
 .registerForm .agree{
 	font-size: 12px;
 }
