--- a/views/issue/register.ejs
+++ b/views/issue/register.ejs
@@ -7,7 +7,7 @@
 			<input placeHolder="请输入短信验证码" maxLength="6" type="tel" class="input_text code fl" id="code" />
 			<a type="button" id="smsCodeBtn" maxLength="16" class="codeBtn fr" value="获取短信验证码" >获取短信验证码</a>
 		</label>
-		<label><tt></tt><span class="pwdView">*</span><input maxLength="16" placeHolder="请输入密码" type="password" class="input_text" id="password" /></label>
+		<label><tt></tt><span class="pwdView pwdView_hide"></span><input maxLength="16" placeHolder="请输入密码" type="password" class="input_text" id="password" /></label>
         <label><button type="submit" class="btn" id="registerBtn">注册</button></label>
 	<label class="agree""><input type="checkbox" checked id="agree" />我已阅读并同意遵守<a href="/protocol">法律声明和隐私条款</a></label>
     </form>
