--- a/assets/module/user/partner/partner.css
+++ b/assets/module/user/partner/partner.css
@@ -29,13 +29,23 @@
 
 .partnerItem .company{
 	display: block;
-	margin-left: -4px;
 	height: 24px;
 	line-height: 24px;
 }
 
+.partnerItem .model{
+	font-size: 12px;
+}
+
 .partnerItem .status{
 	font-size: 12px;
+	background: url( ./imgs/partnerIcon.png ) no-repeat;
+	background-size: 26%;
+	padding-left: 16px;
+}
+
+.partnerItem .statusb{
+	background-position: 0 -25px;
 }
 
 .partnerForm{
