--- a/views/issue/welcome.ejs
+++ b/views/issue/welcome.ejs
@@ -2,8 +2,8 @@
 <div class="welcome">
 	<h2>欢迎您</h2>
 	<h3 id="corpname"></h3>
-	<a href="/intro"><img src="/module/issue/welcome/imgs/ad1.png" width="100%" /></a>
-	<a href="/art"><img src="/module/issue/welcome/imgs/ad2.png" width="100%" /></a>
+	<a href="http://wx.qjdchina.com/act/zxyh-001.html"><img src="/module/issue/welcome/imgs/ad1.png" width="100%" /></a>
+	<a href="http://u.eqxiu.com/s/Lg2vUeI2?eqrcode=1"><img src="/module/issue/welcome/imgs/ad2.png" width="100%" /></a>
 	<a href="/wiki"><img src="/module/issue/welcome/imgs/ad3.png" width="100%" /></a>
 </div>
 <% include ../common/footer.ejs %>
